fix navbar spacing

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -10,7 +10,6 @@ $subheading-color: lighten($orange, 20%);
     padding-bottom: 10px;
   }
   background-color: $background;
-  padding-bottom: 20px;
 }
 
 .navbar-nav {
